--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="src" path="test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/gson-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/DateAdapterJ.jar"/>
+	<classpathentry kind="lib" path="lib/DateAdapterJ-1.0.0.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
