Removed serialization implementations as they have moved to the www.GitHub.com/RestExpress/RestExpress project.

--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,6 @@
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/gson-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/DateAdapterJ-1.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/jbel-0.9.1.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
